--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,9 +1,6 @@
 backend:
-  name: github
-  repo: gdixit85/gpkhudi
-  branch: main
-  base_url: https://gpkhudi.pages.dev
-  auth_endpoint: /api/auth
+  name: proxy
+  proxy_url: /api/github
 
 # Local development backend (disable before deployment)
 # local_backend: true
