--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,6 +1,6 @@
 backend:
   name: proxy
-  proxy_url: /api/github
+  proxy_url: https://gpkhudi.pages.dev/api/github
 
 # Local development backend (disable before deployment)
 # local_backend: true
