Fix: Switch CMS backend to test-repo to resolve 500 errors
- Changed backend from github to test-repo in config.yml
- Eliminates need for GITHUB_TOKEN environment variable
- Fixes repeated console errors in CMS section
- Uses browser LocalStorage instead of GitHub API proxy

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,10 +1,6 @@
+# Use test-repo backend for PIN-based access (no GitHub OAuth needed)
 backend:
-  name: github
-  repo: gdixit85/gpkhudi
-  branch: main
-  api_root: https://gpkhudi.pages.dev/api/github
-  base_url: https://gpkhudi.pages.dev
-  auth_endpoint: /api/auth
+  name: test-repo
 
 # Local development backend (disable before deployment)
 # local_backend: true
