--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,6 +1,10 @@
-# Use test-repo backend for PIN-based access (no GitHub OAuth needed)
 backend:
-  name: test-repo
+  name: github
+  repo: gdixit85/gpkhudi
+  branch: main
+  api_root: https://gpkhudi.pages.dev/api/github
+  base_url: https://gpkhudi.pages.dev
+  auth_endpoint: /api/auth
 
 # Local development backend (disable before deployment)
 # local_backend: true
